hw submission commit

--- a/layout.html
+++ b/layout.html
@@ -8,22 +8,22 @@
   <body>
     <h1 id="title">Acme: First, Second, Third</h1>
     <div class="boxes" >
-      <div class="first box">
+      <div class="first">
         <button id="right1" class="right move">></button>
         <button class="left move"><</button>
         <h3>FIRST</h3>
-          <button id="jerry" class="char">Jerry</button>
-          <button id="elaine" class="char">Elaine</button>
-          <button id="kramer" class="char">Kramer</button>
-          <button id="george" class="char">George</button>
+        <button class="char">Jerry</button>
+        <button class="char">Elaine</button>
+        <button class="char">Kramer</button>
+        <button class="char">George</button>
       </div>
-      <div class="second box">
+      <div class="second">
         <button id="right2" class="right move">></button>
         <button id="left2" class="left move"><</button>
         <h3>SECOND</h3>
 
       </div>
-      <div class="third box">
+      <div class="third">
         <button class="right move">></button>
         <button id="left3" class="left move"><</button>
         <h3>THIRD</h3>
